--- a/css.css
+++ b/css.css
@@ -72,7 +72,7 @@ body{
         color: #E3F2FD;
 }
 
-@media screen and (max-width: 800px) {
+/*@media screen and (max-width: 800px) {
         .controls{
                 display: grid;
                 grid-template-columns: repeat(4,1fr);
@@ -92,4 +92,4 @@ body{
                 border-left-color: #212837;
                 
         }
-}
+}*/
